AlgoProg/Semestre2/Polygone/.svn/pristine/28/2816591d03af3da9cc201ae405176f9ac1fcb4f3.svn-base
Polygone.java:176: error: cannot find symbol
            Point nextSommet = sommets[(iSommet + 1) % sommet.length];
                                                       ^
  symbol:   variable sommet
  location: class Polygone
1 error
